--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/telegram-web-app": "^7.2.1",
     "axios": "^1.6.8",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
