--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/telegram-web-app": "^7.2.1",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "markdown-draft-js": "^2.4.0",
